# stapel-categories

./: CHANGELOG.md  CONFIG.MD  CONTRIBUTING.md  MODULE.md  README.md  SECURITY.md  __init__.py  admin.py  apps.py  catalog_fixtures.py  catalog_load.py  checks.py  conf.py  conftest.py  dto.py  errors.py  events.py  feature_editor.py  forms.py  functions.py  models.py  pyproject.toml  serializers.py  translation.py  translation_keys.py  urls.py  validators.py  views.py
.github/workflows/: ci.yml  publish.yml
docs/: capabilities.json
management/commands/: export_catalog.py  load_catalog.py
migrations/: 0001_initial.py  0002_category_is_test_feature_is_test.py
schemas/emits/: category.changed.json
schemas/functions/: categories.features.json
tests/: test_catalog_export.py  test_catalog_load.py  test_catalog_roundtrip_dirty.py  test_category_commands.py  test_comm.py  test_extension_points.py  test_feature_editor.py  test_feature_editor_enhancements.py  test_feature_editor_review_fixes.py  test_meta_regression.py  test_models.py  test_public_api.py  test_translation_keys.py  urls.py
