[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-categories"
version = "0.1.0"
description = "Category tree for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "categories"]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "stapel-core>=0.3.0,<0.4",
    "stapel-attributes>=0.1,<0.2",
    "django-treenode>=0.23,<0.24",
    "drf-spectacular>=0.27",
]

[project.optional-dependencies]
all = []

[tool.setuptools]
package-dir = {"stapel_categories" = "."}
packages = ["stapel_categories", "stapel_categories.migrations", "stapel_categories.tests"]

[tool.setuptools.package-data]
stapel_categories = ["py.typed", "migrations/*.py", "schemas/**/*.json"]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q --import-mode=importlib"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/migrations/*",
]
